# openclaw-matrix-rust

./: .gitignore  README.md  index.ts  openclaw.plugin.json  package.json  pnpm-lock.yaml  tsconfig.json
native/: Cargo.toml
native/crates/matrix-core/: Cargo.toml
native/crates/matrix-core/src/: lib.rs
native/crates/matrix-core/src/api/: mod.rs  types.rs
native/crates/matrix-core/src/auth/: session.rs
native/crates/matrix-core/src/client/: mod.rs
native/crates/matrix-core/src/crypto/: mod.rs
native/crates/matrix-core/src/emoji/: mod.rs
native/crates/matrix-core/src/events/: mod.rs
native/crates/matrix-core/src/media/: mod.rs
native/crates/matrix-core/src/previews/: mod.rs
native/crates/matrix-core/src/reactions/: mod.rs
native/crates/matrix-core/src/state/: mod.rs
native/crates/matrix-core/src/sync/: mod.rs
scripts/: probe-custom-emoji.ts
src/: actions.test.ts  actions.ts  channel.test.ts  channel.ts  config-schema.test.ts  config-schema.ts  openclaw-plugin-sdk.d.ts  runtime.test.ts  runtime.ts  types.ts
src/matrix/: access-policy.ts  accounts.ts  allowlist.ts  flushed-event-dedupe.test.ts  flushed-event-dedupe.ts  history-buffer.test.ts  history-buffer.ts  inbound-batcher.test.ts  inbound-batcher.ts  inbound-format.ts  inbound.test.ts  inbound.ts  reply-policy.test.ts  reply-policy.ts  rooms.test.ts  rooms.ts  session-dispatcher.test.ts  session-dispatcher.ts  sillytavern-card-detect.ts  startup-backfill.test.ts  startup-backfill.ts  user-profiles.test.ts  user-profiles.ts
src/matrix/adapter/: config.test.ts  config.ts  events.test.ts  (+2 more)
