[package]
name = "openclaw-matrix-native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
chrono = { version = "0.4.41", features = ["clock", "serde"] }
matrix-sdk = { version = "0.16.0", default-features = false, features = ["bundled-sqlite", "e2e-encryption", "sqlite", "rustls-tls"] }
mime = "0.3.17"
napi = { version = "2.16.17", default-features = false, features = ["napi8"] }
napi-derive = "2.16.13"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "sync", "time"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }

[build-dependencies]
napi-build = "2.1.5"

[dev-dependencies]
wiremock = "0.6.5"
